--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ coverage/
 # Build outputs
 dist/
 build/
+electron-dist/
+src-tauri/
 *.tsbuildinfo
 
 # DuckDB WASM files (downloaded at build time)
